syntax = "proto3";

package hello;

// todo http api 怎么实现？
//import "google/api/annotations.proto";

option go_package = "api/hello/v1;hello";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {
    //option (google.api.http) = {
    //  get: "/hello"
    //};
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
